# ProExtractor

./: .gitignore  CLAUDE.md  README.md  TEST_CHECKLIST.md  USER_GUIDE.md  generate_build.py  main.py  pyproject.toml  requirements.txt  styles.py
core/: __init__.py  config.py  constants.py  downloader.py  ffmpeg_manager.py  storage.py  utils.py  worker.py  worker_process.py
data/: __init__.py
ui/: __init__.py  help_dialog.py  icons.py  main_window.py  settings.py  sidebar.py  widgets.py
