[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pro-extractor"
version = "1.0.0"
authors = [
    { name = "PRO EXTRACTOR Contributors" },
]
description = "A modern desktop application for downloading YouTube videos and playlists."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "PySide6==6.11.0",
    "yt-dlp",
    "darkdetect",
    "requests",
]

[project.gui-scripts]
pro-extractor = "desktop.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["desktop*"]
