[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pro-extractor"
version = "1.0.0"
authors = [
    { name = "PRO EXTRACTOR Contributors" },
]
description = "A modern desktop application for downloading videos and playlists."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "PySide6==6.11.0",
    "yt-dlp",
    "darkdetect",
    "requests",
    "secretstorage",
    "cryptography",
]

[project.gui-scripts]
pro-extractor = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
